k8s/admin-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-frontend
  namespace: patadeveludo
spec:
  selector:
    app: admin-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
